# RoboticsProjectsLab

./: README.md
autonomous-vehicle-control/: README.md
computer-vision-projects/yolov8-batch-detection/include/: yolo_detector.hpp
computer-vision-projects/yolov8-batch-detection/src/: yolo_detector.cpp
control-systems-projects/: motor-current-control-lqr-mpc
motor-current-control-lqr-mpc/: Point71_simulink_z.slx  Project_Zahra.m  ZahraMPC7_vel.m
multi-robot-coordination/: README.md
simple_yolo/: yolov8_simple  yolov8_simple.cpp
yolov8-batch-detection/YoloV8_CPP_Detector/: CMakeLists.txt  main.cpp
